gccida/c1/make_tree
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4515:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v11; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4517:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4518:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4519:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4525:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4526:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4529:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4530:5: error: expected ';' after expression
tree v26; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4530:6: error: use of undeclared identifier 'v26'
tree v26; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4531:5: error: expected ';' after expression
tree v27; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4531:6: error: use of undeclared identifier 'v27'
tree v27; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4552:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
d.r[2] = ( __int64)x[2]; 
                   ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4558:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( signed __int64)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4577:33: error: expected expression
tree = make_tree( type, *( rtx *)( x->fld[0].rtwint + 8 * v20 - 8)); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/expmed.c:4586:32: error: expected expression
v10 = make_tree( type, *( rtx *)&x[1]); 
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_tree/src/obj/expmed.o] Error 1
